# socket-notes

./: README.md  client.py  client2.py  pyproject.toml  server.py
